2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/09_ifSeul.deca
// Description:
//    tests de programme correct, if seul
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{
    if(true)
    {
        print("true");
        println("true");
        printx("true");
        printlnx("true");
    }
}