2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/01_BlocNonferme.deca
// Description:
//    tests de programme incorrect bloc non fermé
//
// Resultats:
//    ligne 9 : Erreur, missing '}'
//
// Historique:
//    cree le 09/01/2024
{ "hello";